[package]
name = "dioxus-modal"
version = "0.1.1"
edition = "2024"
description = "A utility for Dioxus for handling modals"
license = "MIT OR Apache-2.0"

[dependencies]
dioxus = "0.6.3"
dioxus-modal-macros = "0.1.1"
dioxus-transition = "0.1.3"
gloo = "0.11"
tracing = "0.1"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "console",
    "EventTarget",
    "KeyboardEvent",
    "Window",
] }
