[package]
name = "dioxus-modal"
version = "0.1.2"
edition = "2024"
description = "Modal composable for Dioxus"
license = "MIT OR Apache-2.0"

[dependencies]
dioxus = "0.6.3"
dioxus-modal-macros = "0.1.2"
dioxus-transition = "0.2"
gloo = "0.11"
tracing = "0.1"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "console",
    "EventTarget",
    "KeyboardEvent",
    "Window",
] }
